--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: lightgray;
+    font-family: monospace, sans-serif;
     height: 100vh;
     margin: 0;
 }
@@ -21,15 +23,32 @@ body {
     grid-column: 1 / -1;
     object-fit: cover;
     overflow: hidden;
-    border: 2px solid black;
+    border: 4px solid black;
     border-radius: 50%;
 }
 
 img {
     width: 300px;
-    margin-bottom: -8px;
+    transform: scale(1.5);
 }
 
 #real-face-img {
     display: none;
+}
+
+button {
+    font-family: monospace, sans-serif;
+    font-size: 1.2rem;
+    padding: 8px;
+    border: 2px solid black;
+    border-radius: 10px;
+}
+
+button:hover {
+    background-color: black;
+    color: white;
+}
+
+.selected {
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
