--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,10 @@ img {
     display: none;
 }
 
+#real-face-img {
+  transform: translateX(-8px) scale(1.5);
+}
+
 button {
     font-family: monospace, sans-serif;
     font-size: 1rem;
