--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 64px;
+    gap: 32px;
 }
 
 .img-grid {
@@ -63,11 +63,15 @@ button:hover {
 }
 
 .card {
+    display: block;
     background-color: darkgray;
-    width: min(75%, 500px);
+    width: min(75%, 650px);
+    height: 364px;
+    box-sizing: border-box;
     padding: 16px;
     border: 4px solid black;
     border-radius: 10px;
+    overflow: auto;
 }
 
 h1 {
@@ -81,7 +85,20 @@ h1 {
 }
 
 p {
-    margin: 0;
+  margin-bottom: 0;
+}
+
+.gt {
+  color: rgb(133, 116, 55);
+  font-weight: bold;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
 }
 
 @keyframes wave {
@@ -109,4 +126,11 @@ p {
     100% {
       transform: rotate(0deg);
     }
+}
+
+@media (max-height: 720px) {
+  body {
+    align-items: start;
+    padding: 20px;
+  }
 }
